--- a/source/style/style.css
+++ b/source/style/style.css
@@ -93,6 +93,6 @@ code {
 .block[class$="6"]{background-color: #ffc19f;}  .block[class$="6"] h2{color: #cc4037;}  .block[class$="6"] p{color: #cc4037;}
 .block[class$="7"]{background-color: #000;}     .block[class$="7"] h2{color: #FFF;}  .block[class$="7"] p{color: #FFF;}
 .block[class$="8"]{background-color: #F2F2F2;}  .block[class$="8"] h2{color: #666;}  .block[class$="8"] p{color: #666;}
-.block[class$="9"]{background-color: #348fd4;}  .block[class$="9"] h2{color: #06406c;}  .block[class$="9"] p{color: #000;}
+.block[class$="9"]{background-color: #64ABEC;}  .block[class$="9"] h2{color: #06406c;}  .block[class$="9"] p{color: #000;}
 .block[class$="0"]{background-color: #fff8c9;}  .block[class$="0"] h2{color: #2d2700;}  .block[class$="0"] p{color: #615400;}
 
