--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-<div class="well">
-<center>
+<div class="center block 8">
 create by 
-<a href='http://abbshr.github.io'>Ran Aizen</a>©2013 and Powered by 
-<a href='http://github.com'>GitHub Page</a> & Jekyll
-</center>
+<a href='http://abbshr.github.io'>Ran Aizen</a>©2013 deployed on
+<a href='http://github.com'>GitHub Page</a> Powered by Jekyll
 </div>
+<!-- 
 <script src="//cdnjs.bootcss.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="{{site.url}}/source/javascript/bootstrap.min.js"></script>
+-->
 {% include profile.html %}
