--- a/source/style/style.css
+++ b/source/style/style.css
@@ -91,6 +91,14 @@ code {
     font-family: menlo, monospace;
 }
 
+label {
+	background-color: #D8D8D8;
+	font-size: 13px;
+    border-radius: 15px;
+    color: 000;
+    padding: 5px 15px;
+}
+
 .center {
 	text-align: center;
 }
