--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <meta name="description" content="{{page.metades}}">
 <link rel="shortcut icon" href="{{site.url}}/favicon.ico" type="image/x-icon"/>
 <link rel="Bookmark" href="{{site.url}}/favicon.ico">
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="{{site.url}}/source/style/style.css">
 <!--
 	<link rel="stylesheet" href="{{site.url}}/source/style/bootstrap.css" />
 	<link href="{{site.url}}/source/style/bootstrap-responsive.min.css" rel="stylesheet">
