--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
 	<nav class="center">
 		<a href="{{site.url}}/codelib">Project</a>
 		<a href="{{site.url}}/archive">Articles</a>
-		<a href="">Ran</a>
+		<a href="#">Ran</a>
 		<a href="{{site.url}}/cool">Cool</a>
 		<a href="{{site.url}}/gist">Gist</a>
 		<a href="{{site.url}}/todolist">TodoList</a>
