--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,20 +4,20 @@
 	<div class="span8 offset2">
 	<div class="navbar navbar-inverse">
 	<div class="navbar navbar-inner">
+	<a href="{{site.url}}/gist">Gist</a>
 -->
 <div class="block">
 	<h1 class="center">
-		<a href="{{site.baseurl}}">Ran Aizen 2013</a>
+		<a href="{{site.baseurl}}">{{ page.title }}</a>
 	</h1>
 	<nav class="center">
 		<a href="{{site.url}}/codelib">Project</a>
 		<a href="{{site.url}}/archive">Articles</a>
 		<a href="#">Ran</a>
 		<a href="{{site.url}}/cool">Cool</a>
-		<a href="{{site.url}}/gist">Gist</a>
 		<a href="{{site.url}}/todolist">TodoList</a>
 		<a href="{{site.url}}/tools">原料箱</a>
-		<a href="{{site.url}}/jscool">JS</a>
+		<a href="{{site.url}}/jscool">play-JS</a>
 		<a href="{{site.url}}/feedback">FeedBack</a>
 	</nav>
 </div>
