--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 	<nav class="center">
 		<a href="{{site.url}}/codelib">Project</a>
 		<a href="{{site.url}}/archive">Articles</a>
-		<a href="#">Ran</a>
+		<a href="{{site.url}}/codelib/about.html">Ran</a>
 		<a href="{{site.url}}/cool">Cool</a>
 		<a href="{{site.url}}/todolist">TodoList</a>
 		<a href="{{site.url}}/tools">原料箱</a>
