--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,11 +1,9 @@
-<div id="myprofile" class="modal hid fade" tabindex="-1" role="dialog" aria-labelledby="myprofileLabel" aria-hidden="true" style="display: none;">
-<div class="modal-header">
-<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-<h3>MyProfile</h3>
+<div class="block 3 center">
+	<h2>My Profile</h2>
 </div>
-<div class="modal-body">
+<div class="block 8">
 <pre>
-var me.JSON = {
+var me = JSON.stringify({
     name: 'Ran.Aizen',
     age: Number(new Date().getFullYear()) - 1993,
     collage: "HIT",
@@ -19,10 +17,9 @@ var me.JSON = {
 	},
     hate: ['debuging', 'much-humanbeing'],
 	nick: ['Krthugade', 'abbshr', 'SouFii']
-};
+});
 </pre>
 </div>
-<div class="modal-footer">
-    <a href="mailto:abbshr@outlook.com" class="btn btn-primary">@ mailMe</a>
-  </div>
+<div class="block 4">
+    <a href="mailto:abbshr@outlook.com" class="center">@mailMe</a>
 </div>
