--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,7 +1,4 @@
-<div class="block 3 center">
-	<h2>My Profile</h2>
-</div>
-<div class="block 8">
+<div class="block 7">
 <pre>
 var me = JSON.stringify({
     name: 'Ran.Aizen',
@@ -20,6 +17,6 @@ var me = JSON.stringify({
 });
 </pre>
 </div>
-<div class="block 4">
-    <a href="mailto:abbshr@outlook.com" class="center">@mailMe</a>
+<div class="center block 6">
+    <a href="mailto:abbshr@outlook.com">@mailMe</a>
 </div>
