--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,15 +2,13 @@
 <pre>
 var me = JSON.stringify({
     name: 'Ran.Aizen',
-    age: Number(new Date().getFullYear()) - 1993,
     collage: "HIT",
     hobbies: ['math', 'coding', 'eating', 'playing'],
     github: 'abbshr',
-    maincodlang: 'JavaScript',
+    maincodlang: ['JavaScript', 'C'],
     platform: ['Node.js', 'Chromium'],
     database: {
     	NoSQL: 'MongoDB',
-    	SQL: null
 	},
     hate: ['debuging', 'much-humanbeing'],
 	nick: ['Krthugade', 'abbshr', 'SouFii']
