--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,7 @@
 		<a href="{{site.url}}/codelib">Project</a>
 		<a href="{{site.url}}/archive">Articles</a>
 		<a href="{{site.url}}/codelib/about.html">Ran</a>
+		<a href="{{site.url}}/cool">Links</a>
 		<a href="{{site.url}}/todolist">TodoList</a>
 		<a href="{{site.url}}/jscool">little book</a>
 		<a href="{{site.url}}/feedback">FeedBack</a>
