--- a/source/style/style.css
+++ b/source/style/style.css
@@ -103,6 +103,7 @@ pre {
     font-family: consolas, monospace;
     padding-right: 20%;
   	padding-left: 20%;
+  	overflow: auto;
 }
 
 blockquote {
