update css & add Dushuo remark plugins

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -157,7 +157,6 @@ nav {
 .block[class$="0"]{background-color: #fff8c9;}  .block[class$="0"] h2{color: #2d2700;}  .block[class$="0"] p{color: #615400;}
 
 .feedback {
-	margin: 0;
-	padding-right: 200px;
-  	padding-left: 200px;	
+	width: 960px;
+	margin: 40px auto;	
 }
