--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,13 +5,15 @@ var me = JSON.stringify({
     collage: "HIT",
     hobbies: ['math', 'coding', 'eating', 'playing'],
     github: 'abbshr',
-    maincodlang: ['JavaScript', 'C'],
+    maincodlang: ['JavaScript', 'C', 'Bash'],
     platform: ['Node.js', 'Chromium'],
     database: {
-    	NoSQL: 'MongoDB'
+        NoSQL: 'MongoDB'
 	},
+    tech: ['WebSocket'],
+    lang_dont_like: ['Java', 'VB', 'C++'],
     hate: ['debuging', 'much-humanbeing'],
-	nick: ['Krthugade', 'abbshr', 'SouFii']
+    nick: ['Krthugade', 'abbshr', 'SouFii']
 });
 </pre>
 </div>
