--- a/source/style/style.css
+++ b/source/style/style.css
@@ -64,23 +64,24 @@ p {
 }
 
 a {
-	color: inherit;
+    color: inherit;
     text-decoration: none;
-    transition:color 0.3s linear;
-    -moz-transition:color 0.3s linear;
-	-webkit-transition:color 0.3s linear;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
 }
 
 a:hover {
     color: #d35c6f;
+    text-shadow: 0px 0px 5px #d35c6f;
 }
 
 p a {
-	color: #d35c6f;
+    color: #d35c6f;
     text-decoration: none;
-    transition:color 0.3s linear;
-    -moz-transition:color 0.3s linear;
-	-webkit-transition:color 0.3s linear;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
 }
 
 ul {
@@ -145,16 +146,135 @@ nav {
     padding-bottom: 80px;
 }
 
-.block[class$="1"]{background-color: #348fd4;}  .block[class$="1"] h2{color: #06406c;}  .block[class$="1"] p{color: #06406c;}
-.block[class$="2"]{background-color: #06406c;}  .block[class$="2"] h2{color: #FFF}  .block[class$="2"] p{color: #FFF}
-.block[class$="3"]{background-color: #FFF;}  	.block[class$="3"] h2{color: #000;}  .block[class$="3"] p{color: #000;}
-.block[class$="4"]{background-color: #4c0d09;}  .block[class$="4"] h2{color: #d3b2af;}  .block[class$="4"] p{color: #d3b2af;}
-.block[class$="5"]{background-color: #cc4037;}  .block[class$="5"] h2{color: #4c0d09;}  .block[class$="5"] p{color: #4c0d09;}
-.block[class$="6"]{background-color: #ffc19f;}  .block[class$="6"] h2{color: #cc4037;}  .block[class$="6"] p{color: #cc4037;}
-.block[class$="7"]{background-color: #000;}     .block[class$="7"] h2{color: #FFF;}  .block[class$="7"] p{color: #FFF;}
-.block[class$="8"]{background-color: #F2F2F2;}  .block[class$="8"] h2{color: #666;}  .block[class$="8"] p{color: #666;}
-.block[class$="9"]{background-color: #64ABEC;}  .block[class$="9"] h2{color: #06406c;}  .block[class$="9"] p{color: #000;}
-.block[class$="0"]{background-color: #fff8c9;}  .block[class$="0"] h2{color: #2d2700;}  .block[class$="0"] p{color: #615400;}
+.block[class$="1"]{background-color: #348fd4;}  
+.block[class$="1"] a{
+    color: #06406c; 
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}
+.block[class$="1"] a:hover{
+    color: #06406c;
+    text-shadow: 0px 0px 5px #06406c;
+}
+.block[class$="1"] p{color: #06406c;}
+
+.block[class$="2"]{background-color: #06406c;}  
+.block[class$="2"] a{
+    color: #FFF
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="2"] a:hover{
+    color: #FFF;
+    text-shadow: 0px 0px 5px #FFF;
+}
+.block[class$="2"] p{color: #FFF}
+
+.block[class$="3"]{background-color: #FFF;}  	
+.block[class$="3"] a{
+    color: #000;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}
+.block[class$="3"] a:hover{
+    color: #000;
+    text-shadow: 0px 0px 5px #000;
+}  
+.block[class$="3"] p{color: #000;}
+
+.block[class$="4"]{background-color: #4c0d09;}  
+.block[class$="4"] a{
+    color: #d3b2af;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="4"] a:hover{
+    color: #d3b2af;
+    text-shadow: 0px 0px 5px #d3b2af;
+}
+.block[class$="4"] p{color: #d3b2af;}
+
+.block[class$="5"]{background-color: #cc4037;}  
+.block[class$="5"] a{
+    color: #4c0d09;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="5"] a:hover{
+    color: #4c0d09;
+    text-shadow: 0px 0px 5px #4c0d09;
+}
+.block[class$="5"] p{color: #4c0d09;}
+
+.block[class$="6"]{background-color: #ffc19f;}  
+.block[class$="6"] a{
+    color: #cc4037;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="6"] a:hover{
+    color: #cc4037;
+    text-shadow: 0px 0px 5px #cc4037;
+}
+.block[class$="6"] p{color: #cc4037;}
+
+.block[class$="7"]{background-color: #000;}     
+.block[class$="7"] a{
+    color: #FFF;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="7"] a:hover{
+    color: #FFF;
+    text-shadow: 0px 0px 5px #FFF;
+}
+.block[class$="7"] p{color: #FFF;}
+
+.block[class$="8"]{background-color: #F2F2F2;}  
+.block[class$="8"] a{
+    color: #666;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="8"] a:hover{
+    color: #666;
+    text-shadow: 0px 0px 5px #666;
+}
+.block[class$="8"] p{color: #666;}
+
+.block[class$="9"]{background-color: #64ABEC;}  
+.block[class$="9"] a{
+    color: #06406c;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="9"] a:hover{
+    color: #06406c;
+    text-shadow: 0px 0px 5px #06406c;
+}
+.block[class$="9"] p{color: #000;}
+
+.block[class$="0"]{background-color: #fff8c9;}  
+.block[class$="0"] a{
+    color: #2d2700;
+    transition:color 0.6s linear,text-shadow 0.6s linear;
+    -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
+    -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
+}  
+.block[class$="0"] a:hover{
+    color: #2d2700;
+    text-shadow: 0px 0px 5px #2d2700;
+}
+.block[class$="0"] p{color: #615400;}
 
 .feedback {
 	width: 960px;
