--- a/source/style/style.css
+++ b/source/style/style.css
@@ -161,7 +161,7 @@ nav {
 
 .block[class$="2"]{background-color: #06406c;}  
 .block[class$="2"] a{
-    color: #FFF
+    color: #FFF;
     transition:color 0.6s linear,text-shadow 0.6s linear;
     -moz-transition:color 0.6s linear, text-shadow 0.6s linear;
     -webkit-transition:color 0.6s linear, text-shadow 0.6s linear;
