--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,7 +2,7 @@
 <pre>
 var me = JSON.stringify({
     name: 'Ran.Aizen',
-    collage: "HIT",
+    college: "HIT",
     hobbies: ['math', 'coding', 'eating', 'playing'],
     github: 'abbshr',
     maincodlang: ['JavaScript', 'C', 'Bash'],
