--- a/_layouts/poslay.html
+++ b/_layouts/poslay.html
@@ -7,7 +7,7 @@
 <body>
 {% include navbar.html %}
 
-<div class="block {{ page.date | date_to_string }}">
+<div class="block">
   <h3 class="center">	
   	{{ page.date | date_to_string }}
   </h3>
