--- a/source/style/style.css
+++ b/source/style/style.css
@@ -55,6 +55,17 @@ h4 {
     padding-left: 200px;
 }
 
+h5 {
+    font-size: 25px;
+    font-weight: normal;
+    font-family: "Gibson", "Helvetica Neue", "Helvetica-Neue", helvetica, sans-serif;
+    margin: 0;
+    margin-top: 40px;
+    color: #d35c6f;
+    padding-right: 200px;
+    padding-left: 200px;
+}
+
 p {
     width: 960px;
     margin: 40px auto;
